apps/base/dagster/dagster.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dagster
  labels:
    toolkit.fluxcd.io/tenant: kog-team
