apps/base/dagster/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dagster-dashboard-basicauth
  namespace: dagster
spec:
  basicAuth:
    secret: dagster-dashboard-auth
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dagster-frontend
  namespace: dagster
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    # OAuth2 Proxy routes
    - match: Host(`dagster.local.reinthal.me`) && PathPrefix(`/oauth2/`)
      kind: Rule
      services:
        - name: oauth2-dagster-webui-proxy-oauth2-proxy
          port: 80
    # Dagster routes - now going through OAuth2 Proxy instead of directly to Dagster
    - match: Host(`dagster.local.reinthal.me`)
      kind: Rule
      services:
        - name: oauth2-dagster-webui-proxy-oauth2-proxy # Point to OAuth2 proxy instead of Dagster directly
          port: 80
  tls:
    secretName: local-reinthal-me-tls
---
